Review comments implemented
Added runparameter support

Rebuild plugin is updated so that it now  support runparameter values.
The changed java files are Rebuilder.java and RebuildAction.java under the
package src/main/java/com/sonyericsson/rebuild.